Fixed CDI tests on JPMS
Signed-off-by: Roman Grigoriadi <bravehorsie@gmail.com>